<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Робота молоді</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_of_resumes">Завантаження \n резюме</string>
    <string name="search_hint">шукати</string>
    <string name="in_city">в місті</string>
    <string name="make_choice">обрати</string>
    <string name="in_field">в галузі</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="site">Сайт:</string>
    <string name="link">Джерело:</string>
    <string name="publish_date">Опубліковано:</string>
    <string name="check_connection">Перевірте підключення до Internet</string>
    <string name="detail_search_arrow">пошук</string>
    <string name="done">Готово</string>
    <string name="nothing_found">Нічого не знайдено</string>
    <string name="page_loading">Завантаження сторінки</string>
    <string name="no_records_in_db">В базі данних немає записів. \n\r Перевірте піжключення до Internet \n\r та перезавантажте додаток!</string>

    <string-array name="vacancy_or_resume">
        <item>вакансії</item>
        <item>резюме</item>
    </string-array>

    <string name="title_activity_select_city_or_field">SelectCityOrFieldActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_web_page">WebPageActivity</string>

</resources>
