<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.ita.sergey.petrosyuk.MainActivity$PlaceholderFragment" >
    
    <LinearLayout
        android:id="@+id/ll_search_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_uk" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <EditText 
                android:id="@+id/et_search_line"
                style="@style/SearchLine"/>
            
            <ImageButton
		        android:id="@+id/search_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="#00000000"
		        android:src="@drawable/search_button_style" />
            
        </LinearLayout>
        
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:orientation="horizontal"
        	    android:paddingTop="10dp"
        	    android:paddingLeft="4dp">

	            <TextView 
		            style="@style/TextLabel"
		            android:text="@string/search_hint"/>
		        
		        <Spinner 
		            android:id="@+id/spiner_vacancy_or_resume"
		            android:layout_width="0dp"
		            android:layout_weight="75"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:gravity="center_vertical"
		            android:background="#00000000"/>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="9dp"
	            android:padding="4dp"
	            android:orientation="horizontal">
	            <TextView 
		            style="@style/TextLabel"
		            android:text="@string/in_city"/>
		        
		        <Button
		            android:id="@+id/btn_in_city"
		            style="@style/ButtonCityField"/>

		        <ImageButton
		            android:id="@+id/button_clear_city"
		            style="@style/ButtonClear"/>

	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="4dp"
	            android:orientation="horizontal">
		        
	            <TextView 
		            style="@style/TextLabel"
		            android:text="@string/in_field" />
		        
		        <Button
		            android:id="@+id/btn_in_field"
		            style="@style/ButtonCityField"
		            android:layout_height="wrap_content" />
		        
		        <ImageButton 
		            android:id="@+id/button_clear_field"
		            style="@style/ButtonClear" />

	        </LinearLayout>
    </LinearLayout>
    
    <Button 
        android:id="@+id/close_open_search_block"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#CCCCCC"
        android:textSize="12sp"
        android:background="#00000000"
        android:drawableLeft="@drawable/close_arrow"
        android:drawablePadding="3dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/detail_search_arrow"/>
    
    <RelativeLayout 
        android:id="@+id/rl_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar 
	        android:id="@+id/pb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"/>
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/lv_show_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    </ListView>
</LinearLayout>
