<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.ita.robotamolodi.DetailActivity$PlaceholderFragment" > 
        
    <ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:overScrollMode="always"
		android:isScrollContainer="true"
		android:scrollbarAlwaysDrawVerticalTrack="true"
		android:scrollbars="vertical"
		android:scrollbarStyle="outsideInset" >
		
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="#ffffff">
		
	      	<LinearLayout 
	      	    android:id="@+id/ll_title_city"
	      	    android:layout_width="match_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_marginBottom="15dp"
	      	    android:orientation="horizontal">
	      	    
	      	    <TextView 
			       android:id="@+id/tv_title_detail"
			       android:layout_width="0dp"
			       android:layout_height="wrap_content"
			       android:layout_weight="1"
			       android:textColor="@android:color/black"
			       android:textSize="18sp"
			       android:text="title"/>
			   
			   	<TextView 
			       android:id="@+id/tv_city_detail"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@android:color/black"
			       android:text="city"/>
	      	</LinearLayout>
	      	
	      	<LinearLayout 
	      	    android:id="@+id/ll_publish_date_detail"
	      	    android:layout_width="match_parent"
	      	    android:layout_height="wrap_content"
	      	    android:orientation="horizontal">
	      	    <TextView 
	      	        android:id="@+id/tv_publish_date_label"
	      	        android:layout_width="wrap_content"
	      	        android:layout_height="wrap_content"
	      	        android:layout_marginRight="10dp"
	      	        android:text="@string/publish_date"/>
	      	    <TextView 
	      	        android:id="@+id/tv_publish_date_detail"
	      	        android:layout_width="0dp"
	      	        android:layout_height="wrap_content"
	      	        android:layout_weight="1"
	      	        android:text="publish_date"/>
	      	</LinearLayout>
	      	
	      	<View 
	      	    android:layout_width="match_parent"
	      	    android:layout_height="1dp"
	      	    android:background="#E8E8E8"
	      	    android:layout_marginBottom="5dp"
	      	    android:layout_marginTop="5dp"/>
	      	
	      	<TextView 
	      	    android:id="@+id/tv_description_detail"
	      	    android:layout_width="match_parent"
	      	    android:layout_height="wrap_content"
	      	    android:textColor="@android:color/black"
	      	    android:text="description"/>
	      	
	      	<View 
	      	    android:layout_width="match_parent"
	      	    android:layout_height="1dp"
	      	    android:background="#E8E8E8"
	      	    android:layout_marginBottom="5dp"
	      	    android:layout_marginTop="5dp"/>
	      	
	      	<LinearLayout 
	      	    android:id="@+id/ll_site"
	      	    android:layout_width="match_parent"
	      	    android:layout_height="wrap_content"
	      	    android:orientation="horizontal">
	      	    <TextView 
	      	        android:id="@+id/tv_site_label"
	      	        android:layout_width="0dp"
	      	        android:layout_height="wrap_content"
	      	        android:layout_weight="25"
	      	        android:text="@string/site"/>
	      	    <TextView 
	      	        android:id="@+id/tv_site_detail"
	      	        android:layout_width="0dp"
	      	        android:layout_height="wrap_content"
	      	        android:layout_weight="75"
	      	        android:drawableLeft="@drawable/rabota_ua"
	      	        android:drawablePadding="2dp"
	      	        android:text="site"/>
	      	</LinearLayout>
	      	
	      	<LinearLayout 
	      	    android:id="@+id/ll_link"
	      	    android:layout_width="match_parent"
	      	    android:layout_height="wrap_content"
	      	    android:orientation="horizontal">
	      	    <TextView 
	      	        android:id="@+id/tv_link_label"
	      	        android:layout_width="0dp"
	      	        android:layout_height="wrap_content"
	      	        android:layout_weight="25"
	      	        android:text="@string/link"/>
	      	    <TextView 
	      	        android:id="@+id/tv_link_detail"
	      	        android:layout_width="0dp"
	      	        android:layout_height="wrap_content"
	      	        android:layout_weight="75"
	      	        android:text="link"/>
	      	</LinearLayout>
		</LinearLayout>
    </ScrollView>
</RelativeLayout>
